@@ -2,6 +2,9 @@ Hadoop Change Log
 
     HADOOP-12304. Applications using FileContext fail with the default file
     system configured to be wasb/s3/etc. (cnauroth)
+    
+    HADOOP-13362. DefaultMetricsSystem leaks the source name when a source
+    unregisters (Junping Du via jlowe)
 
 Release 2.7.0 - 2015-04-20
 
